<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/itemListFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_items"/>

    <item
        android:id="@+id/addItemFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add"/>

    <item
        android:id="@+id/savedItemsFragment"
        android:icon="@drawable/ic_saved"
        android:title="@string/nav_saved"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"/>

</menu>